--- a/views/header.ejs
+++ b/views/header.ejs
@@ -11,13 +11,13 @@
 <div id="header">
     <div class="header-bar row">
         <div class="left-side col-7">
-            <a href="/mainpage">
+            <a href="/v2/mainpage">
                 <image src="assets/images/rss-icon.png" class="header-logo">
                 <div class="project-name">Stream Feed Platform</div>
             </a>
         </div>
         <div class="right-side col-5">
-            <a href="/user-profile"><i class="fa-solid fa-circle-user"></i>
+            <a href="/v2/userprofile"><i class="fa-solid fa-circle-user"></i>
             <span class="username">Custom Settings</span></a>
         </div>
     </div>
